--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "highlight.js": "^10.7.2",
-    "md5": "^2.3.0",
-    "quill": "^1.3.7",
+    "marked": "^2.0.6",
+    "pako": "^2.0.3",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.4",
     "vue-router": "^3.2.0",
