--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 	"dependencies": {
 		"axios": "^0.21.1",
 		"core-js": "^3.6.5",
-		"highlight.js": "^10.7.2",
+		"dompurify": "^2.2.9",
 		"marked": "^2.0.6",
 		"pako": "^2.0.3",
 		"vue": "^2.6.11",
