--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "cos-js-sdk-v5": "^1.2.13",
     "cos-nodejs-sdk-v5": "^2.9.18",
     "dompurify": "^2.2.9",
+    "jimp": "^0.16.1",
     "marked": "^2.0.6",
     "md5": "^2.3.0",
-    "pako": "^2.0.3",
+    "uuid": "^8.3.2",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.4",
     "vue-router": "^3.2.0",
@@ -27,14 +29,12 @@
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-airbnb": "^5.0.2",
-    "axios": "^0.21.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
-    "vue-axios": "^3.2.4",
     "vue-template-compiler": "^2.6.11"
   }
 }
