--- a/ui/package.json
+++ b/ui/package.json
@@ -1,32 +1,34 @@
 {
-  "name": "myblog-ui",
-  "version": "1.0.0",
-  "description": "",
-  "main": "main.js",
-  "scripts": {
-    "dev": "webpack serve --config ./build/webpack.dev.js",
-    "build": "webpack --config  ./build/webpack.prod.js"
-  },
-  "author": "caizhenhong",
-  "license": "ISC",
-  "devDependencies": {
-    "clean-webpack-plugin": "^4.0.0-alpha.0",
-    "css-loader": "^5.2.6",
-    "file-loader": "^6.2.0",
-    "friendly-errors-webpack-plugin": "^1.7.0",
-    "html-webpack-plugin": "^5.3.2",
-    "mini-css-extract-plugin": "^1.6.1",
-    "sass": "^1.35.1",
-    "sass-loader": "^12.1.0",
-    "style-loader": "^3.0.0",
-    "url-loader": "^4.1.1",
-    "vue-loader": "^15.9.7",
-    "vue-template-compiler": "^2.6.14",
-    "webpack": "^5.40.0",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
-  },
-  "dependencies": {
-    "vue": "^2.6.14"
-  }
+	"name": "myblog-ui",
+	"version": "1.0.0",
+	"description": "",
+	"main": "main.js",
+	"scripts": {
+		"dev": "webpack serve --config ./build/webpack.dev.js",
+		"build": "webpack --config  ./build/webpack.prod.js"
+	},
+	"author": "caizhenhong",
+	"license": "ISC",
+	"devDependencies": {
+		"clean-webpack-plugin": "^4.0.0-alpha.0",
+		"css-loader": "^5.2.6",
+		"file-loader": "^6.2.0",
+		"friendly-errors-webpack-plugin": "^1.7.0",
+		"html-webpack-plugin": "^5.3.2",
+		"mini-css-extract-plugin": "^1.6.1",
+		"sass": "^1.35.1",
+		"sass-loader": "^12.1.0",
+		"style-loader": "^3.0.0",
+		"url-loader": "^4.1.1",
+		"vue-loader": "^15.9.7",
+		"vue-template-compiler": "^2.6.14",
+		"webpack": "^5.40.0",
+		"webpack-cli": "^4.7.2",
+		"webpack-dev-server": "^3.11.2"
+	},
+	"dependencies": {
+		"vue": "^2.6.14",
+		"vue-router": "^3.5.2",
+		"vuex": "^3.6.2"
+	}
 }
