--- a/ui/package.json
+++ b/ui/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "myblog-ui",
+	"name": "ui",
 	"version": "1.0.0",
 	"description": "",
 	"main": "main.js",
@@ -27,7 +27,11 @@
 		"webpack-dev-server": "^3.11.2"
 	},
 	"dependencies": {
+		"axios": "^0.21.1",
+		"echarts": "^5.1.2",
+		"mockjs": "^1.1.0",
 		"vue": "^2.6.14",
+		"vue-axios": "^3.2.4",
 		"vue-router": "^3.5.2",
 		"vuex": "^3.6.2"
 	}
