--- a/ui/package.json
+++ b/ui/package.json
@@ -30,6 +30,7 @@
 		"axios": "^0.21.1",
 		"vue": "^2.6.14",
 		"vue-axios": "^3.2.4",
+		"vue-i18n": "^8.25.0",
 		"vue-router": "^3.5.2",
 		"vuex": "^3.6.2"
 	}
