--- a/ui/package.json
+++ b/ui/package.json
@@ -18,6 +18,7 @@
     "mini-css-extract-plugin": "^1.6.1",
     "sass": "^1.35.1",
     "sass-loader": "^12.1.0",
+    "sass-resources-loader": "^2.2.4",
     "vue-loader": "^15.9.7",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^5.42.0",
