--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^1.6.1",
+    "nodemon": "^2.0.12",
     "sass": "^1.35.1",
     "sass-loader": "^12.1.0",
     "sass-resources-loader": "^2.2.4",
@@ -27,25 +28,22 @@
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.8.0",
-    "nodemon": "^1.8.1"
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "co": "^4.6.0",
+    "koa": "^2.13.1",
+    "koa-bodyparser": "^4.3.0",
+    "koa-debug": "^1.2.1",
+    "koa-json": "^2.0.2",
+    "koa-logger": "^3.2.1",
+    "koa-onerror": "^4.1.0",
+    "koa-router": "^10.1.1",
+    "koa-static": "^5.0.0",
     "vue": "^2.6.14",
     "vue-axios": "^3.2.4",
     "vue-router": "^3.5.2",
-    "vuex": "^3.6.2",
-    "co": "^4.6.0",
-    "debug": "^2.6.3",
-    "jade": "~1.11.0",
-    "koa": "^1.4.0",
-    "koa-bodyparser": "^2.5.0",
-    "koa-json": "^1.1.3",
-    "koa-logger": "^1.3.1",
-    "koa-onerror": "^1.3.1",
-    "koa-router": "^5.4.0",
-    "koa-static": "^1.5.2",
-    "koa-views": "^3.1.0"
+    "vuex": "^3.6.2"
   }
 }
