--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "caizhenhong",
   "license": "ISC",
   "devDependencies": {
+    "acorn": "^8.5.0",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "compression-webpack-plugin": "^8.0.1",
     "css-loader": "^5.2.6",
