--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "koa-logger": "^3.2.1",
     "koa-onerror": "^4.1.0",
     "koa-router": "^10.1.1",
+    "koa-session": "^6.2.0",
     "koa-static": "^5.0.0",
     "vue": "^2.6.14",
     "vue-axios": "^3.2.4",
