--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "koa-session": "^6.2.0",
     "koa-static": "^5.0.0",
     "mongoose": "^6.0.7",
+    "require-all": "^3.0.0",
     "vue": "^2.6.14",
     "vue-axios": "^3.2.4",
     "vue-router": "^3.5.2",
