--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "koa-router": "^10.1.1",
     "koa-session": "^6.2.0",
     "koa-static": "^5.0.0",
+    "marked": "^3.0.4",
     "mongoose": "^6.0.7",
     "require-all": "^3.0.0",
     "vue": "^2.6.14",
