--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "co": "^4.6.0",
+    "js-cookie": "^3.0.1",
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
     "koa-debug": "^1.2.1",
